force-app/main/default/objects/Developer__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>Date of Birth</description>
    <formula>YEAR(TODAY())-YEAR(DOB__c)+
IF(MONTH(TODAY())&gt;MONTH(DOB__c),0,
IF(DAY(TODAY())&gt;=DAY(DOB__c),0,-1
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Date of Birth</inlineHelpText>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>