force-app/main/default/objects/Developer__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Country of work</description>
    <inlineHelpText>Country of work</inlineHelpText>
    <label>Country</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AUSTRALIA</fullName>
            </value>
            <value>
                <fullName>INDIA</fullName>
                <default>true</default>
                <label>INDIA</label>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>USA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>